--- a/colorGame.html
+++ b/colorGame.html
@@ -3,15 +3,20 @@
 <head>
     <title>RGB Game</title>
     <link rel="stylesheet" href="colorGame.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
-    <h1>The Great <span id="colorDisplay">RGB</span> Color Game</h1>
+    <h1>The Great 
+        <br>
+        <span id="colorDisplay">RGB</span> 
+        <br>
+        Color Game</h1>
 
     <div id="stripe">
         <button id="reset">New Colors</button>
         <span id="message"></span>
-        <button id="easyBtn">Easy</button>
-        <button id="hardBtn" class="selected">Hard</button>
+        <button class="mode">Easy</button>
+        <button class="mode selected">Hard</button>
     </div>
 
     <div id="container">
